[package]
name = "ydke_parser"
version = "0.2.0"
edition = "2021"
authors = ["lilacgrimoire@gmail.com"]
description = "A parser for YGOPro deck URLs in the YDKE format"
repository = "https://github.com/Satellaa/ydke_parser"
license = "MIT OR Apache-2.0"
keywords = ["yugioh", "ygopro", "parser"]
categories = ["parser-implementations", "games"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.1"
thiserror = "1.0.65"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true

[profile.dev]
opt-level = 0
debug = true

[profile.test]
opt-level = 0
debug = true

[badges]
maintenance = { status = "actively-developed" }